--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "node-sass": "^4.13.0",
+    "normalize.css": "^8.0.1",
     "vant": "^2.5.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
